--- a/static/src/views/check_in_view.xml
+++ b/static/src/views/check_in_view.xml
@@ -5,6 +5,7 @@
          <div class="oh_dashboards" style="margin-left: 2%;">
             <div class="container-fluid my-5 o_ccpp_check_in1"/>
             <div class="container-fluid my-5 o_ccpp_check_in2"/>
+            <div class="container-fluid my-5 o_ccpp_check_in3"/>
         </div>
     </t>
 
@@ -130,10 +131,10 @@
                             <i t-attf-class="fa fa-2x fa-sign-in align-middle"/>
                         </button>
                     </div>
-                    <div t-if="widget.step == '1' and widget.analytic_line.strategy != false" class="flex-grow-1 update_check_in done_strategy">
-                        <button t-attf-class="o_hr_attendance_sign_in_out_icon btn btn-{{ checked_in ? 'warning' : 'success' }} align-self-center px-5 py-3 mt-4 mb-2 done_strategy">
-                            <span class="align-middle fs-2 me-3 text-white done_strategy">Check IN &amp; Done Strategy</span>
-                            <i t-attf-class="fa fa-2x fa-sign-in align-middle done_strategy"/>
+                    <div t-if="widget.step == '1' and widget.analytic_line.strategy != false" class="flex-grow-1 update_check_in need_done_strategy">
+                        <button t-attf-class="o_hr_attendance_sign_in_out_icon btn btn-{{ checked_in ? 'warning' : 'success' }} align-self-center px-5 py-3 mt-4 mb-2 need_done_strategy">
+                            <span class="align-middle fs-2 me-3 text-white need_done_strategy">Check IN &amp; Done Strategy</span>
+                            <i t-attf-class="fa fa-2x fa-sign-in align-middle need_done_strategy"/>
                         </button>
                     </div>
 
@@ -246,25 +247,33 @@
 
                     <t t-call="HrAttendanceUserBadge">
                         <t t-set="userId" t-value="widget.employee.id"/>
-                        <t t-set="userName" t-value="widget.employee.name"/>
+                        <!--<t t-set="userName" t-value="widget.employee.name"/>-->
                     </t>
 
                     <div class="flex-grow-1">
                         <h1 class="mt-5" t-esc="widget.employee.name"/>
                         <h3 class="" t-esc="widget.date.date_time_now"/>
                     </div>
-
-                    <div>
-                        <h3>Are you sure to done strategy</h3>
+                    
+                    <div style="padding-top:30px;">
+                        <h3>Are you sure to done strategy <span t-esc="widget.analytic_line.strategy"></span></h3>
                     </div>
+                    <!-- <div class="row">
+                        <div class="col-4" style="white-space: nowrap !important;">
+                            <b>Strategy</b>
+                        </div>
+                        <div class="col-8">
+                            <span t-esc="widget.analytic_line.strategy"></span>
+                        </div>
+                    </div> -->
 
-                    <div t-if="widget.step == '2'" class="flex-grow-1">
-                        <button type="button" class="btn-secondary px-5 py-3 mt-4 mb-2 skip_done">
-                            <span class="align-middle fs-2 me-3">Skip &amp; Done</span>
+                    <div class="flex-grow-1">
+                        <button type="button" class="btn-secondary px-5 py-3 mt-4 mb-2 skip_done_strategy">
+                            <span class="align-middle fs-2 me-3">Skip</span>
                             <i t-attf-class="fa fa-4x align-middle"/>
                         </button>
-                        <button  type="button" class="btn-success px-5 py-3 mt-4 mb-2 done">
-                            <span class="align-middle fs-2 me-3">Done</span>
+                        <button  type="button" class="btn-success px-5 py-3 mt-4 mb-2 done_strategy">
+                            <span class="align-middle fs-2 me-3">Done Strategy</span>
                             <i t-attf-class="fa fa-4x align-middle"/>
                         </button>
                     </div>
