--- a/static/src/views/check_in_calendar_common_view.xml
+++ b/static/src/views/check_in_calendar_common_view.xml
@@ -7,7 +7,7 @@
 	<t t-name="check_in_calendar" t-inherit="web.CalendarCommonPopover.footer" t-inherit-mode="primary" owl="1" >
 		<xpath expr="//t[@t-if='isEventDeletable']" position="after">
 			<t t-if="isNotDone and isOwner">
-				<button class="btn btn-success me-1" t-on-click="openCheckIn" icon="fa-sign-in">
+				<button class="btn btn-success me-1" style="padding-left:10px;" t-on-click="openCheckIn" icon="fa-sign-in">
 					<span class="align-middle me-2 text-white">Check IN</span>
 					<i t-attf-class="fa fa-1x fa-sign-in align-middle"/>
 				</button>
@@ -19,17 +19,24 @@
         </div>-->
 		</xpath>
 		
-			<xpath expr="//t[@t-if='isEventEditable']/a[1]" position="replace">
-				<t t-if="isNotDone == true">
-					<a href="#" class="btn btn-primary o_cw_popover_edit" t-on-click="onEditEvent">Edit</a>
-				</t>
-				<t t-if="isNotDone == false">
-					<button class="btn btn-primary me-1" t-on-click="openSituation">
-						<span class="align-middle me-2 text-white">Edit</span>
-						<i t-attf-class="fa fa-1x align-middle"/>
-					</button>
-				</t>
-			</xpath>
+		<xpath expr="//t[@t-if='isEventEditable']/a[1]" position="replace">
+			<t t-if="isNotDone == true">
+				<a href="#" class="btn btn-primary o_cw_popover_edit" t-on-click="onEditEvent">Edit</a>
+			</t>
+			<t t-if="isNotDone == false">
+				<button class="btn btn-primary me-1" t-on-click="openSituation">
+					<span class="align-middle me-2 text-white">Edit</span>
+					<i t-attf-class="fa fa-1x align-middle"/>
+				</button>
+			</t>
+			<t t-if="isNotDone == false and isOwner">
+				<button class="btn btn-danger me-1" style="padding-left:10px;" t-on-click="cancelSituation">
+					<span class="align-middle me-2 text-white">Cancel</span>
+					<i t-attf-class="fa fa-1x align-middle"/>
+				</button>
+			</t>
+		</xpath>
+
 		
 		
 	</t>
