--- a/views/ccpp_menu_replace_all.xml
+++ b/views/ccpp_menu_replace_all.xml
@@ -8,7 +8,7 @@
 
     <!-- Discuss -->
     <record model="ir.ui.menu" id="mail.menu_root_discuss">
-        <field name="groups_id" eval="[(6,0,[ref('base.group_system')])]"/>
+        <field name="groups_id" eval="[(6,0,[ref('base.group_system'),ref('ccpp.group_access_discuss')])]"/>
     </record>
 
     <!-- Calendar -->
