--- a/views/rocker_timesheet_views.xml
+++ b/views/rocker_timesheet_views.xml
@@ -417,11 +417,18 @@
                                     </group>
                                 </group>
                             </page>
-                            <page name="task_team" string="Task Team">
+                            <!-- <page name="task_team" string="Task Team">
                                 <field name="job_ids" options="{'no_create_edit':True}">
                                     <tree editable="bottom">
                                         <field name="employee_id" string="User" widget="many2one_avatar_user" readonly="1"/>
                                         <field name="name" string="Job Position" readonly="1"/>
+                                    </tree>
+                                </field>
+                            </page> -->
+                            <page name="task_team" string="Task Team">
+                                <field name="employee_ids" options="{'no_create_edit':True}">
+                                    <tree editable="bottom">
+                                        <field name="user_id" string="User" widget="many2one_avatar_user" readonly="1"/>
                                     </tree>
                                 </field>
                             </page>
