--- a/views/ccpp_menu_replace_all.xml
+++ b/views/ccpp_menu_replace_all.xml
@@ -96,4 +96,10 @@
         <field name="groups_id" eval="[(6,0,[ref('base.group_system')])]"/>
     </record>-->
 
+    <!-- CRM -->
+    <record model="ir.ui.menu" id="crm.crm_menu_root">
+        <field name="sequence" eval="3"/>
+        <field name="groups_id" eval="[(6,0,[ref('base.group_system'),ref('ccpp.group_access_discuss')])]"/>
+    </record>
+
 </odoo>
